# f1_tracks

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  webviz.html
src/: trackpoints_to_scans.cpp
src/vector_map/: vector_map.cpp  vector_map.h
vectormaps/: Austin.vectormap.json  BrandsHatch.vectormap.json  Budapest.vectormap.json  Catalunya.vectormap.json  Hockenheim.vectormap.json  IMS.vectormap.json  Melbourne.vectormap.json  MexicoCity.vectormap.json  Montreal.vectormap.json  Monza.vectormap.json  MoscowRaceway.vectormap.json  Norisring.vectormap.json  Nuerburgring.vectormap.json  Oschersleben.vectormap.json  Sakhir.vectormap.json  SaoPaulo.vectormap.json  Sepang.vectormap.json  Shanghai.vectormap.json  Silverstone.vectormap.json  Sochi.vectormap.json  Spa.vectormap.json  Spielberg.vectormap.json  Suzuka.vectormap.json  YasMarina.vectormap.json  Zandvoort.vectormap.json
